@@ -1,6 +1,11 @@
 launchpad-buildd (217) UNRELEASED; urgency=medium
 
+  [ Colin Watson ]
   * Improve deployment documentation.
+
+  [ Jürgen Gmach ]
+  * Pass secrets via a YAML configuration file in order to prevent
+    credentials from being leaked in logfiles. 
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 18 Jul 2022 15:07:23 +0100
 
